<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/item_name"
        android:id="@+id/item_name_text"
        android:inputType="textPersonName" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/make"
        android:id="@+id/item_make_text"
        android:inputType="textPersonName" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/model"
        android:inputType="textPersonName"
        android:id="@+id/item_model_text"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/serial_number"
        android:inputType="text"
        android:id="@+id/serial_number_text"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="10"
        android:hint="@string/dd_mm_yyyy"
        android:inputType="datetime"
        android:id="@+id/item_acquisition_date_text"/>
    <EditText
        android:id="@+id/item_value_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/value"
        android:digits="0123456789."
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/item_comments_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/comments"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/error_text_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:gravity="center"
        android:visibility="gone"
        android:textColor="@color/tomato_red"/>
    <!--Layout for buttons (add/delete tag and camera button) -->

    <!-- layout for camera buttons/Text-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/take_photo_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_photo"
            android:layout_weight="1"
            android:gravity="center"
            android:visibility="visible"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/add_image_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_existing_photo"
            android:gravity="center"
            android:layout_weight="1"
            android:visibility="visible"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center">

        <!-- TODO add functionality -->


        <ImageButton
            android:id="@+id/take_photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_photo_camera_24" />

        <ImageButton
            android:id="@+id/add_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_photo_library_24" />
    </LinearLayout>

    <!-- layout for tag buttons-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/add_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_tag"/>

        <Button
            android:id="@+id/remove_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/remove_tag" />
    </LinearLayout>

    <!--TODO make area for tags to show -->


</LinearLayout>