<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/edit_item_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/item_name"
        android:inputType="textPersonName"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edit_item_make_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/make"
        android:inputType="textPersonName"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edit_item_model_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/model"
        android:inputType="textPersonName"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edit_item_acquisition_date_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dd_mm_yyyy"
        android:inputType="datetime"
        android:maxLength="10"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edit_item_value_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="0123456789."
        android:ems="10"
        android:hint="@string/value"
        android:inputType="numberDecimal"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edit_item_comments_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/comments"
        android:inputType="textPersonName"
        tools:ignore="TouchTargetSizeCheck" />

    <LinearLayout
        android:id="@+id/edit_image_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_more_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="+ Images" />

        <Button
            android:id="@+id/select_images_to_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_images_to_delete" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/image_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <TextView
        android:id="@+id/edit_error_text_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:gravity="center"
        android:visibility="gone"
        android:textColor="@color/tomato_red" />

</LinearLayout>

